--- a/src/css/style.css
+++ b/src/css/style.css
@@ -6,17 +6,13 @@
   padding: 0;
 }
 
-p, h1, h2, h3, h4, h5, h6 {
-  cursor: default;
-}
-
 #container {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
   min-height: 100vh;
-  background-color: #0044ff;
+  background-color: #3a3a3a;
   gap: 3.5rem;
 }
 
@@ -32,6 +28,8 @@ p, h1, h2, h3, h4, h5, h6 {
   width: 75%;
   padding: 4.5rem;
   display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
   align-items: center;
   gap: 1.75rem;
 }
@@ -47,6 +45,7 @@ p, h1, h2, h3, h4, h5, h6 {
   justify-content: center;
   align-items: center;
   gap: 1.375rem;
+  height: 5rem;
 }
 #section1 form div {
   display: flex;
@@ -56,7 +55,7 @@ p, h1, h2, h3, h4, h5, h6 {
 }
 #section1 form div input {
   width: 100%;
-  height: 5rem;
+  height: 100%;
   font-size: 1.375rem;
   border-radius: 10px 0 0 10px;
   padding-left: 15%;
@@ -67,7 +66,7 @@ p, h1, h2, h3, h4, h5, h6 {
   outline: 2px solid #dddddd;
 }
 #section1 form div button {
-  height: 5rem;
+  height: 100%;
   border-radius: 0 10px 10px 0;
   padding: 1.375rem;
   border: 2px solid transparent;
@@ -81,8 +80,8 @@ p, h1, h2, h3, h4, h5, h6 {
   transition: 0.5s;
 }
 #section1 form div button:hover {
-  background-color: #3a3a3a;
-  border-color: #3a3a3a;
+  background-color: #75ff68;
+  border-color: #75ff68;
 }
 #section1 form span {
   color: #991515;
@@ -103,6 +102,9 @@ p, h1, h2, h3, h4, h5, h6 {
   justify-content: center;
   align-items: center;
   gap: 2.5rem;
+}
+#section2 #cardArea #before-img {
+  width: 70%;
 }
 
 .countryCard {
@@ -137,11 +139,11 @@ p, h1, h2, h3, h4, h5, h6 {
 
 .info-card {
   text-decoration: none;
-  color: #3a3a3a;
+  color: #dddddd;
   border-radius: 10px;
   padding: 0.375rem;
   width: 20%;
-  background-color: #dddddd;
+  background-color: transparent;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -152,8 +154,57 @@ p, h1, h2, h3, h4, h5, h6 {
 }
 .info-card:hover {
   scale: 1.1;
-  background-color: #0044ff;
-  color: #dddddd;
+  background-color: #75ff68;
+  color: #3a3a3a;
+}
+
+@media (max-width: 900px) {
+  #section1 {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+  }
+  #section1 #information {
+    width: 100%;
+    padding: 4.5rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 1.75rem;
+  }
+  #section1 #information p {
+    width: 50%;
+  }
+  #section1 #information #logo-img {
+    width: 40%;
+  }
+}
+@media (max-width: 650px) {
+  #section1 {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+  }
+  #section1 #information {
+    width: 100%;
+    padding: 4.5rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 1.75rem;
+  }
+  #section1 #information p {
+    width: 100%;
+  }
+  #section1 #information #logo-img {
+    width: 100%;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
